Bug 350731 - [4.81 beta1] akregator in kontact: read messages are removed from unread filter immediately
Summary: [4.81 beta1] akregator in kontact: read messages are removed from unread filt...
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 353958 354531 354721 354746 356978 359543 365329 368324 373018 373229 376649 376807 380218 381425 384256 387883 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-29 07:01 UTC by qqqqqqqqq9
Modified: 2017-12-28 19:38 UTC (History)
48 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to intercept and selectively ignore the 'Article Read' event (2.04 KB, patch)
2016-12-20 21:49 UTC, Erik van 't Wout
Details

Note You need to log in before you can comment on or make changes to this bug.
Description qqqqqqqqq9 2015-07-29 07:01:53 UTC
When the unread filter is on, it is applied *immediately* after selecting an unread messages. It then hides this message. It walks through feed until there are no further unread messages. 
This makes the unread-filter pretty useless.

Reproducible: Always

Steps to Reproduce:
1. set filter to unread
2. select a feed with unread messages
3. select the first unread messages

Actual Results:  
The message is shown, marked read and removed from the list.
Then akregator moves on to the next messages.
The goes on until there are now further unread messages in the feed. 

Expected Results:  
The message is shown, marked read and stays to be read.
Comment 1 e8hffff 2015-08-25 13:24:36 UTC
CONFIRMED
Comment 2 e8hffff 2015-08-25 13:26:59 UTC
As soon as you click an unread item all unread items are instantly marked as read.    I've tried putting key shortcuts to default in case there was some strange mouse assignment to mark-all-feeds-as-read.
Comment 3 Jérôme Pigeot 2015-08-28 16:06:52 UTC
CONFIRMED as well
Comment 4 S Clark 2015-09-29 15:15:11 UTC
Also confirmed...

This seems to specifically be a problem with the behavior around the "mark selected article read after..." advanced setting.  I think this defaults to 0 seconds (i.e. immediately) which is what I used to have it set to. Previously, this just meant the article was marked "read" as soon as it was clicked, and if you had the unread filter set, it would then disappear from the list AFTER you clicked away from it to another article.  Now the article is immediately removed from the list, causing the selection to automagically drop to the next, mark *it* unread, remove it, etc.

You can watch it happen more slowly if you go to settings -> configure akregator -> advanced and set it to mark as read after, say, 5 seconds.

Perhaps this bug should just read "Read articles should not be removed by the unread filter while the article is selected"?
Comment 5 Tom Hall 2015-10-03 08:47:03 UTC
Also happens if the status filter is set to 'New', presumably because articles aren't new once they've been read.

"Read articles should not be removed by the unread filter while the article is selected" sounds like a good solution.
Comment 6 Martin Tlustos 2015-10-23 13:12:01 UTC
Confirmed here with akregator 5.0.2 and Kubuntu 15.10
Comment 7 Jaak Ristioja 2015-10-24 21:45:42 UTC
(In reply to Martin Tlustos from comment #6)
> Confirmed here with akregator 5.0.2 and Kubuntu 15.10

Same here. Data loss! I mean how is one later supposed to figure out which messages one missed to read after this happens?! ARGHH!! ;-[

(Voting for this one)
Comment 8 Shai 2015-10-25 07:04:27 UTC
(In reply to S Clark from comment #4)
> Perhaps this bug should just read "Read articles should not be removed by
> the unread filter while the article is selected"?

That's a compromise, not an ideal solution. The ideal solution is akregator 4.x behavior -- the "unread" filter is not applied continuously, but only upon selection of a folder (or, of course, changing of filter). This means if you enter a feed and have 3 unread items, once you've read them all, you see 3 read items.
Comment 9 Shai 2015-10-25 07:05:43 UTC
*** This bug has been confirmed by popular vote. ***
Comment 10 Christoph Feck 2015-10-29 02:27:24 UTC
*** Bug 354531 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2015-11-02 10:38:23 UTC
*** Bug 354721 has been marked as a duplicate of this bug. ***
Comment 12 OlafLostViking 2015-12-12 17:40:24 UTC
Still valid for Akregator included in 15.08.3
Comment 13 Christoph Feck 2015-12-22 11:43:39 UTC
*** Bug 356978 has been marked as a duplicate of this bug. ***
Comment 14 Rolf Eike Beer 2016-02-01 17:15:15 UTC
*** Bug 353958 has been marked as a duplicate of this bug. ***
Comment 15 Rolf Eike Beer 2016-02-01 17:15:28 UTC
*** Bug 354746 has been marked as a duplicate of this bug. ***
Comment 16 Francesc Xavier Vinyals i Carreró 2016-02-03 22:42:01 UTC
Same problem with Kubuntu 15.04 and Akregator 5.0.2
Comment 17 John Andersen 2016-02-05 19:43:25 UTC
Still appearing in 
Akregator Version 5.1.1
KDE Frameworks 5.18.0
Manjaro/Arch repositories
Running embedded within Kontact.

Since this happens every single time, it pretty much makes it impossible to read feeds showing only unread posts, as they all disappear from view. Certainly, even volunteer developers can track this down in 6 months.
Comment 18 Harald Brunner 2016-02-05 19:59:40 UTC
(In reply to John Andersen from comment #17)
> Still appearing in 
> Akregator Version 5.1.1
> KDE Frameworks 5.18.0
> Manjaro/Arch repositories
> Running embedded within Kontact.
> 
> Since this happens every single time, it pretty much makes it impossible to
> read feeds showing only unread posts, as they all disappear from view.
> Certainly, even volunteer developers can track this down in 6 months.

You can go to Settings > Advanced and disable the automatic marking as read, then use Ctrl+E to do it manually.
Comment 19 Christoph Feck 2016-02-25 02:59:20 UTC
*** Bug 359543 has been marked as a duplicate of this bug. ***
Comment 20 OlafLostViking 2016-04-26 07:40:57 UTC
Still valid for Akregator from Applications 16.04.
Comment 21 Mirek Mieszczak 2016-06-16 13:51:24 UTC
Same in gentoo until 16.04.2
Comment 22 Jaak Ristioja 2016-06-16 16:08:47 UTC
(In reply to Mirek Mieszczak from comment #21)
> Same in gentoo until 16.04.2

Is it fixed in 16.04.2 or you just haven't tested that version yet?
Comment 23 Mirek Mieszczak 2016-06-17 06:29:46 UTC
(In reply to Jaak Ristioja from comment #22)
> (In reply to Mirek Mieszczak from comment #21)
> > Same in gentoo until 16.04.2
> 
> Is it fixed in 16.04.2 or you just haven't tested that version yet?

It is not fixed yet. Yesterday I just compiled version 16.04.2 and tested. Of course without success.
Comment 24 EkriirkE 2016-07-08 06:14:56 UTC
Just upgraded Fedora to FC24, the new akregator is on Version 5.2.2.  After spending a long time trying to find where you newly hid the Unread/Important filter dropdown, the whole of all unread items quickly decreases to 0 when an unread new item headline is clicked for reading.
Comment 25 Christoph Feck 2016-07-11 13:21:26 UTC
*** Bug 365329 has been marked as a duplicate of this bug. ***
Comment 26 Javier 2016-08-19 07:44:41 UTC
Confirmed in akregator 5.2.3 on an archlinux system. :-(
Comment 27 Christoph Feck 2016-09-06 12:57:55 UTC
*** Bug 368324 has been marked as a duplicate of this bug. ***
Comment 28 Markus Zimmermann 2016-10-05 15:41:15 UTC
I can also confirm this bug using openSUSE Tumbleweed snapshot 20161003 akregator5-16.08.1-1.2.x86_64
Comment 29 Christopher Heiny 2016-10-06 04:34:19 UTC
Confirmed in 5.3.0 on Fedora 24, latest update.

This pretty much renders akregator useless.  Any chance to bump this 14 month old bug up in priority and get a fix?
Comment 30 Markus Zimmermann 2016-10-19 15:11:28 UTC
Still present in openSUSE Tumbleweed Snapshot 20161018 akregator5-16.08.2-1.1.x86_64
Comment 31 Christoph Feck 2016-11-28 17:24:04 UTC
*** Bug 373018 has been marked as a duplicate of this bug. ***
Comment 32 Christoph Feck 2016-12-04 03:29:06 UTC
*** Bug 373229 has been marked as a duplicate of this bug. ***
Comment 33 darwin te 2016-12-04 13:38:58 UTC
Is this fixed already? I am using kde neon 5.8.4. (Based on Ubuntu 16.04)
Comment 34 darwin te 2016-12-04 13:39:13 UTC
Is this fixed already? I am using kde neon 5.8.4. (Based on Ubuntu 16.04)
Comment 35 darwin te 2016-12-04 13:39:27 UTC
Is this fixed already? I am using kde neon 5.8.4. (Based on Ubuntu 16.04)
Comment 36 Vincent de Phily 2016-12-19 13:01:41 UTC
Hitting this too after upgrading from 4.14 to 5.4.0 (package version 16.12.0).

In 4.14 this only appened when when the interval fetching kicked in, which was not a show-stoper but was still annoying.

Bug 114263 is related to this, although approaching it from the other side.

IMHO articles should only be removed from the list after some human interaction, like clicking on a different feed or changing the search bar. Adding articles to the list should still happen ASAP.
Comment 37 Vincent de Phily 2016-12-19 15:22:15 UTC
For what it's worth, disabling 'mark selected article read after X seconds' in the settings and using 'Crtl-E' to mark them read manually (instead of relying on auto 'mark as read') makes akregator usable again.
Comment 38 Erik van 't Wout 2016-12-20 21:47:29 UTC
Not sure how useful this is, but I've been testing - quite successfully - with below patch for the last few weeks.

Although the patch itself is rather ugly (it basically intercepts the processing of the 'Read' event, bringing back 4.x comparable behaviour), I haven't seen any side effects of it yet. YMMV.

I don't expect this to be applied to official sources, but might be useful for people building their own binaries.
Comment 39 Erik van 't Wout 2016-12-20 21:49:21 UTC
Created attachment 102908 [details]
Patch to intercept and selectively ignore the 'Article Read' event
Comment 40 darwin te 2017-01-29 23:32:50 UTC
Is this fixed already? I am using kde neon 5.8.5. (Based on Ubuntu 16.04)
Comment 41 EkriirkE 2017-01-30 03:18:49 UTC
(In reply to darwin te from comment #40)
> Is this fixed already? I am using kde neon 5.8.5. (Based on Ubuntu 16.04)

No, Akregator 5.3.3 in FC25 still clears all items

Uncheck "Mark selected article read after" under settings/advanced and use Ctrl+E to manually mark as read as you go through the feeds
Comment 42 Christoph Feck 2017-02-21 03:11:30 UTC
*** Bug 376649 has been marked as a duplicate of this bug. ***
Comment 43 Christoph Feck 2017-02-22 16:12:05 UTC
*** Bug 376807 has been marked as a duplicate of this bug. ***
Comment 44 Christoph Feck 2017-05-26 17:13:22 UTC
*** Bug 380218 has been marked as a duplicate of this bug. ***
Comment 45 darwin te 2017-05-26 17:20:39 UTC
This is not fixed yet.  Any solution or estimate?
Comment 46 Christoph Feck 2017-06-25 09:54:42 UTC
*** Bug 381425 has been marked as a duplicate of this bug. ***
Comment 47 Christoph Feck 2017-09-03 12:11:48 UTC
*** Bug 384256 has been marked as a duplicate of this bug. ***
Comment 48 darwin te 2017-09-21 16:05:52 UTC
This is not fixed yet.  Any solution or estimate?
Comment 49 Jonathan Marten 2017-09-21 17:42:45 UTC
Patch submitted at https://phabricator.kde.org/D7928
Comment 50 Jonathan Marten 2017-09-29 15:58:53 UTC
Git commit 08fe30f0973b69101fdedce1a167f74792eb4c5f by Jonathan Marten.
Committed on 29/09/2017 at 15:57.
Pushed by marten into branch 'master'.

Do not remove read messages from the unread filter immediately

Otherwise, when using the filter, the next message will also be selected
and immediately marked as read, until the feed is empty.

Differential Revision: https://phabricator.kde.org/D7928

M  +1    -1    src/article.cpp
M  +5    -3    src/feed/feed.cpp
M  +6    -3    src/feed/feed.h

https://commits.kde.org/akregator/08fe30f0973b69101fdedce1a167f74792eb4c5f
Comment 51 Jonathan Marten 2017-09-29 16:38:42 UTC
Git commit bb7f35c7938e8e18ac83dcc98b43b69ac2772f6c by Jonathan Marten, on behalf of Erik van 't Wout.
Committed on 29/09/2017 at 16:30.
Pushed by marten into branch 'master'.

Do not remove read messages from the unread filter immediately

Otherwise, when using the filter, the next message will also be selected
and immediately marked as read, until the feed is empty.

Differential Revision: https://phabricator.kde.org/D7928

M  +1    -1    src/article.cpp
M  +5    -3    src/feed/feed.cpp
M  +6    -3    src/feed/feed.h

https://commits.kde.org/akregator/bb7f35c7938e8e18ac83dcc98b43b69ac2772f6c
Comment 52 Jonathan Marten 2017-09-29 16:40:34 UTC
Git commit c2d31a56f0d45858706e9a0af9227a24f8e55483 by Jonathan Marten, on behalf of Erik van 't Wout.
Committed on 29/09/2017 at 16:39.
Pushed by marten into branch 'Applications/17.08'.

Do not remove read messages from the unread filter immediately

Otherwise, when using the filter, the next message will also be selected
and immediately marked as read, until the feed is empty.

Differential Revision: https://phabricator.kde.org/D7928

M  +1    -1    src/article.cpp
M  +5    -3    src/feed/feed.cpp
M  +6    -3    src/feed/feed.h

https://commits.kde.org/akregator/c2d31a56f0d45858706e9a0af9227a24f8e55483
Comment 53 Christoph Feck 2017-12-28 19:38:09 UTC
*** Bug 387883 has been marked as a duplicate of this bug. ***