Do not remove read messages from the unread filter immediately

Otherwise, when using the filter, the next message will also be selected
and immediately marked as read, until the feed is empty.

BUG:350731

Differential Revision: https://phabricator.kde.org/D7928